# JSONSchema-Terminal

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  schemapilot.py  setup.py
examples/: user-invalid.json  user-schema.json  user-valid.json
tests/: __init__.py  test_validator.py
